# faceofLastmileICT

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  requirements-dashboard.txt  requirements.txt  setup.py  systems.py
dashboard/: README.md  app.py  new_app.py  requirements.txt  streamlit_app.py
experimental/: ClasslabfitChecks-Garethdata-copy.ipynb  labfitChecks.ipynb
inclusivePackage/: pyproject.toml  requirements.txt
inclusivePackage/.github/workflows/: testing.yaml
inclusivePackage/inclusive_pandasx/: data_analyzer.py  data_manager.py  data_retriever.py  data_transformer.py  data_utils.py  data_visualizer.py
inclusivePackage/src/: Makefile  __init__.py  config.py  data_analyzer.py  data_manager.py  data_reader.py  data_retriever.py  data_sources.py  data_transformer.py  data_utils.py  data_visualizer.py  data_writer.py  script.py
inclusivePackage/test/: conftest.py  requirements.py  test_analyzer.py  test_dataManager.py  test_data_manager.py  test_reader.py  test_transformer.py
labFit/: labfitChecks-Garethdata.ipynb  labfitChecks.ipynb  training_data_dc.csv
labFit/labFit/: inclusiveEnergy.py
