[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "inclusive-package"
version = "0.1.0"
description = "Inclusive package for face of last mile ICT"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "inclusivePackage"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
    \.github
    | \.vscode
    | \.conda
    | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
packages = ["inclusivePackage"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=inclusivePackage --cov-report=xml --junitxml=pytest-results.xml"

[coverage.run]
source = ["inclusivePackage"]
omit = ["tests/*"]

[coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise ImportError",
    "raise NotImplementedError"
]