[project]
name = "inclusivePackage"
version = "0.1.0"
description = "Inclusive Package"
authors = [
    { name="Abib Duut", email="k.aduut@gmail.com" }
]

dependencies = [
    "numpy >=1.24",
    "pandas >=2.2.3",
    "scikit-learn >=1.6.1",
    "setuptools >=75.8.2",
    "six >=1.17.0",
    "threadpoolctl >=3.6.0",
    "tomli >=2.2.1",
    "tzdata >=2025.2",
    "wheel >=0.45.1",
    "contourpy >=1.3.1",
    "cycler >=0.12.1",
    "exceptiongroup >=1.2.2",
    "fonttools >=4.56.0",
    "iniconfig >=2.1.0",
    "joblib >=1.4.2",
    "kiwisolver >=1.4.8",
    "matplotlib >=3.10.1",
    "packaging >=24.2",
    "pillow >=11.1.0",
    "pip >=25.0.1",
    "pluggy >=1.5.0",
    "pyparsing >=3.2.3",
    "pytest >=8.3.5",
    "python-dateutil >=2.9.0.post0",
    "pytz >=2025.2",
    "six >=1.17.0",
    "threadpoolctl >=3.6.0",
    "tomli >=2.2.1",
    "tzdata >=2025.2",
    "wheel >=0.45.1"
]

requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
    \.github
    | \.vscode
    | \.conda
    | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
packages = ["inclusivePackage"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[
    project.optional-dependencies
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.0.280",
    "mypy>=1.0.0",
    "types-python-dateutil>=2.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=inclusivePackage --cov-report=xml --junitxml=pytest-results.xml"

[coverage.run]
source = ["inclusivePackage"]
omit = ["tests/*"]

[coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise ImportError",
    "raise NotImplementedError"
]